# current-weather-cli

./: README.md  pyproject.toml
current_weather_cli/: core.py  main.py
tests/: test_core.py  test_main.py
weather_forecast_cli/: main.py
