[tool.poetry]
name = "weather-forecast-cli"
version = "0.1.0"
description = "A simple CLI to get weather forecasts from an API."
authors = ["awakra <lucasadls0@gmail.com>"]
readme = "README.md"
packages = [{include = "weather_forecast_cli"}]

[tool.poetry.dependencies]
python = ">=3.12"
requests = ">=2.32.4,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"

[tool.poetry.scripts]
weather-cli = "weather_forecast_cli.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"